apps/uptimekuma/deployment.yaml
# Based on https://uptimekuma.org/install-uptime-kuma-docker/
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimekuma-deployment
  namespace: uptimekuma
  labels:
    app: uptimekuma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptimekuma
  template:
    metadata:
      labels:
        app: uptimekuma
    spec:
      serviceAccountName: tailscale
      containers:
        - name: uptimekuma
          image: docker.io/louislam/uptime-kuma:2.3.2
          volumeMounts:
            - name: data
              mountPath: /app/data
          ports:
            - name: tcp
              containerPort: 3001
              protocol: TCP
        - name: ts-sidecar
          imagePullPolicy: Always
          image: "ghcr.io/tailscale/tailscale:v1.96.5"
          securityContext:
            privileged: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: uptimekuma-data
