apps/uptimekuma/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptimekuma-ingressroute
  namespace: uptimekuma
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`uptimekuma.tomerc.com`)
      kind: Rule
      services:
        - name: uptimekuma-service
          port: 3001
